msa/manifests/member-service/member-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgi-edu-member-service
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sgi-edu-member-service
  template:
    metadata:
      labels:
        app: sgi-edu-member-service
    spec:
      containers:
        - name: sgi-edu-member-service
          image: 261243772911.dkr.ecr.ap-northeast-2.amazonaws.com/sgi-edu-member-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
