msa/manifests/member-service/member-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sgi-edu-member-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/member/list"
spec:
  selector:
    app: sgi-edu-member-service
  type: NodePort
  ports:
    - port: 8080 # 서비스가 생성할 포트  
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
